responsive design getting there, need to sort out z-index issue

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,7 +7,7 @@
   width:99.9%; 
   min-height:70vh; 
   position: relative;
- /* z-index: -10;*/
+  z-index: 1;
 }
 
 #pac-input {
