--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -22,7 +22,7 @@ html, body {
 }
 
 .header-divs {
-  padding: 35px;
+  padding: 40px 35px 35px;
   vertical-align: top;
   text-align: center; 
   background: #1f8dd6;
@@ -53,7 +53,7 @@ html, body {
 
 #header-div2 {
   font-size: 60px;
-  padding: 15px;
+  padding-top: 20px;
   margin: 0 0.5%;
 }
 
@@ -79,17 +79,33 @@ html, body {
 }
 
 #dropdowndiv {
-  /*position: relative;*/
+  position: relative;
   background: #1f8dd6;
   opacity: 0.9;
   float: left;
-  width: 100%;
+  width: 150%;
   display: none;
   top: 23px;
+  z-index: 10000000;
 }
 
 #header-div3:hover > #dropdowndiv {
   display: block;
+}
+
+#burger-container-div {
+  display: none;
+  width: 100px;
+  height: 50px;
+  /*border: 1px solid white;*/
+  float: right;
+}
+
+.burger-lines {
+  border: 1px solid white;
+  height: 8px;
+  background: white;
+  margin: 10px 15px;  
 }
 
 main {
@@ -214,7 +230,9 @@ tr {
   #header-div2 {
     float: left;
     width: 100%;
-    padding-top: 20px;
+    padding-top: 25px;
+    padding-left: 150px;
+    text-align: left;
   }
   #header-div2 img {
     width: 10%;
